  can save disk space by deleting obsolete pack files created during the
  pack operation.
  (Parth Malwankar, #304320)

Bug Fixes
*********

* ``.bazaar``, ``.bazaar/bazaar.conf`` and ``.bzr.log`` inherit user and
  group ownership from the containing directory. This allow bzr to work
  better with sudo.
  (Martin <gzlist@googlemail.com>, Parth Malwankar, #376388)

* ``bzr log --exclude-common-ancestry -r X..Y`` displays the revisions that
  are part of Y ancestry but not part of X ancestry (aka the graph
  difference).
  (Vincent Ladeuil, #320119)

* ``bzr selftest --parallel=fork`` wait for its children avoiding zombies.
  (Vincent Ladeuil, #566670)

* ``bzr selftest`` should not use ui.note() since it's not unicode safe.
  (Vincent Ladeuil, #563997)

* Don't mention --no-strict when we just issue the warning about unclean trees.
  (Vincent Ladeuil, #401599)

* Reduce peak memory by one copy of compressed text.
  (John Arbash Meinel, #566940)

* Show the filenames when a file rename fails so that the error will be
  more comprehensible.
  (Martin Pool, #491763)

Improvements
************

* ``append_revisions_only`` will now be interpreted as a boolean and a
  warning emitted if illegal values are used. Note that for projects
  that needs to maintain compatibility with previsous bzr versions,
  only 'True' and 'False' strings must be used (previous versions of
  bzr will interpret all strings differing from 'True'
  (case-sensitive) as false.
  (Brian de Alwis, Vincent Ladeuil)

* ``Config.get_user_option_as_bool`` will now warn if a value cannot
  be interpreted as a boolean.
  (Vincent Ladeuil)

Documentation
*************

API Changes
***********

* Added ``bzrlib.merge.PerFileMerger``, a more convenient way to write
  some kinds of ``merge_file_content`` hook functions.
  (Andrew Bennetts)
  
* `BzrDir`, `Branch`, `Repository` and `WorkingTree` now all support `user_url`,
  `user_transport`, `control_url` and `control_transport` members pointing